update js target to es2020, add RecoilDebugObserver to consolelog changes in recoil state, fix environent settings

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
-APP_BASE_URL=https://brakod.se/calendar
+# Note In a Create React App project, custom environment variables need to be prefixed with REACT_APP_ to be available in the app. 
+REACT_APP_APP_BASE_URL=https://brakod.se/calendar
+REACT_APP_SHOW_RECOIL_DEBUGGER=false
