--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-APP_BASE_URL=http://localhost:3000
+# Note In a Create React App project, custom environment variables need to be prefixed with REACT_APP_ to be available in the app. 
+REACT_APP_APP_BASE_URL=http://localhost:3000
+REACT_APP_SHOW_RECOIL_DEBUGGER=true
